SERVER-65006 Delay unsetting the index build Interceptor until we commit